--- a/public/css/customize.css
+++ b/public/css/customize.css
@@ -1,7 +1,7 @@
 .bg-semi-grey {
-    background-color: #dddddd;
+    background-color: #AEB6BF ;
 }
 
-.bg-semi-white{
-    
+.bg-semi-dark-grey{
+    background-color: #5D6D7E;
 }
