--- a/public/css/index.css
+++ b/public/css/index.css
@@ -5,7 +5,7 @@
 }
 header {
     background-color: rgb(193, 240, 252);
-    background-image: url(../storage/pictures/bg.png);
+    background-image: url(../storage/pictures/3rd_bg.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     height: 530px;
